tdf#96914 MM: don't round trip the source document

To get a unmodified document, the mail merge via File -> Print
used to write a document and reload it. This is not a problem with
normal documents, but with embedded databases this results in a
second database with the same name, which disposes the first
registered database and the xResultSet from the mail merge dialog.

As a workaround this just creates an internal copy, sets the
correct database settings and resets the modified status.

We still need a more general solution to handle documents with the
same embedded DB name in a sane way, probably by making the embedded
database a private object of the documents database manager.

We also need to keep the IsLabelDoc information, otherwise
cloning label documents breaks MM due to undetected, existing
section links.

Change-Id: I20ddea30196d65cb89f69977867f012816ec6001